# ainstein_be

./: .env.example  .gitignore  GUIA_INSTALACION_COMPLETA.md  README.md  alembic.ini  check.py  check_cirugia.py  check_dict.py  check_dict2.py  check_dict_all.py  check_feedback.py  check_mongo.py  cleanup_test_feedback.py  create_admin_user.py  db_info.py  debug_env.py  delete_hc.py  docker-compose.prod.yml  dump_estudios.py  dump_evolucion.py  dump_motivo.py  dump_motivo2.py  dump_remaining.py  dump_rules.py  import_feedback_bson.py  import_llm_usage_bson.py  requirements.txt  test_auth2.py  test_feedback_submission.py  test_rules.py  update_core.py  update_core_2.py  update_core_3.py  update_core_4.py  update_core_5.py  update_core_6.py  update_core_definitions.py  update_estudios.py  update_evolucion.py  update_int.py  (+3 more)
app/: main.py
docs/: CHECKLIST_SISTEMA.md  GUIA_INSTALACION_COMPLETA.md  REFACTORING_SOLID_CHANGELOG.md  REGLAS_EPC_APRENDIZAJE.md  REGLAS_GENERACION_EPC.md
dump_20260228/: README.md  postgres_epc_db_full.sql  qdrant_epc_feedback.snapshot  qdrant_epc_feedback_vectors.snapshot  redis_dump.rdb
dump_20260303/: README.md  qdrant_epc_feedback_vectors.snapshot  qdrant_hce_chunks.snapshot  redis_dump.rdb
dumps_20260128/: mysql_epc_db.sql
dumps_20260225/: README.md  qdrant_epc_feedback.snapshot  qdrant_hce_chunks.snapshot
ferro_engine/: Cargo.toml
ferro_engine/src/: lib.rs
rust_lib/: Cargo.toml
scripts/: generate_complete_learned_rules.py  migrate_markey_to_tenant.py  migrate_motivo.py  migrate_mysql_postgres.py  regenerate_learning_rules.py  (+8 more)
(+120 files in other folders)
