[package]
name = "ferro_engine"
version = "0.1.0"
edition = "2021"
description = "FERRO Protocol - Rust CPU-bound engine for text processing"
license = "MIT"

[lib]
name = "ferro_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
regex = "1"
unicode-segmentation = "1.10"
rayon = "1.8"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
